--- a/svelte/package.json
+++ b/svelte/package.json
@@ -32,6 +32,7 @@
 		"@chromatic-com/storybook": "^4.1.0",
 		"@eslint/compat": "^1.2.5",
 		"@eslint/js": "^9.18.0",
+		"@iconify/svelte": "^5.0.1",
 		"@playwright/test": "^1.49.1",
 		"@storybook/addon-a11y": "^9.1.1",
 		"@storybook/addon-docs": "^9.1.1",
@@ -46,6 +47,7 @@
 		"@tailwindcss/vite": "^4.0.0",
 		"@types/node": "^22",
 		"@vitest/browser": "^3.2.3",
+		"daisyui": "^5.0.50",
 		"drizzle-kit": "^0.30.2",
 		"eslint": "^9.18.0",
 		"eslint-config-prettier": "^10.0.1",
