--- a/svelte/package.json
+++ b/svelte/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "svelte-app",
 	"version": "0.0.1",
-	"private": true,
+	"private": false,
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
