--- a/svelte/package.json
+++ b/svelte/package.json
@@ -24,9 +24,6 @@
 		"build-storybook": "storybook build"
 	},
 	"dependencies": {
-		"@inlang/paraglide-js": "^2.2.0",
-		"@oslojs/crypto": "^1.0.1",
-		"@oslojs/encoding": "^1.1.0",
 		"drizzle-orm": "^0.40.1",
 		"postgres": "^3.4.7"
 	},
@@ -41,7 +38,7 @@
 		"@storybook/addon-svelte-csf": "^5.0.7",
 		"@storybook/addon-vitest": "^9.1.2",
 		"@storybook/sveltekit": "^9.1.2",
-		"@sveltejs/adapter-node": "^5.3.1",
+		"@sveltejs/adapter-auto": "^6.1.0",
 		"@sveltejs/kit": "^2.31.1",
 		"@sveltejs/vite-plugin-svelte": "^6.1.2",
 		"@tailwindcss/forms": "^0.5.10",
