--- a/svelte/package.json
+++ b/svelte/package.json
@@ -1,11 +1,11 @@
 {
 	"name": "svelte-app",
 	"version": "0.0.1",
-	"private": false,
+	"private": true,
 	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build && bun run prepack",
+		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
 		"prepack": "svelte-kit sync && svelte-package && publint",
@@ -27,6 +27,7 @@
 		"@inlang/paraglide-js": "^2.2.0",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
+		"@sveltejs/adapter-node": "^5.3.1",
 		"drizzle-orm": "^0.40.1",
 		"postgres": "^3.4.7"
 	},
@@ -41,7 +42,6 @@
 		"@storybook/addon-svelte-csf": "^5.0.7",
 		"@storybook/addon-vitest": "^9.1.2",
 		"@storybook/sveltekit": "^9.1.2",
-		"@sveltejs/adapter-auto": "^6.1.0",
 		"@sveltejs/kit": "^2.31.1",
 		"@sveltejs/vite-plugin-svelte": "^6.1.2",
 		"@tailwindcss/forms": "^0.5.10",
@@ -72,7 +72,6 @@
 		"vite-plugin-devtools-json": "^0.2.1",
 		"vitest": "^3.2.4",
 		"vitest-browser-svelte": "^0.1.0",
-		"@inlang/paraglide-js": "2.2.0"
 	},
 	"keywords": [
 		"svelte",
