--- a/svelte/package.json
+++ b/svelte/package.json
@@ -71,7 +71,7 @@
 		"vite": "^7.1.2",
 		"vite-plugin-devtools-json": "^0.2.1",
 		"vitest": "^3.2.4",
-		"vitest-browser-svelte": "^0.1.0",
+		"vitest-browser-svelte": "^0.1.0"
 	},
 	"keywords": [
 		"svelte",
