--- a/svelte/tsconfig.json
+++ b/svelte/tsconfig.json
@@ -1,14 +1,7 @@
 {
 	"compilerOptions": {
-		"allowJs": true,
-		"checkJs": true,
-		"esModuleInterop": true,
-		"forceConsistentCasingInFileNames": true,
-		"resolveJsonModule": true,
-		"skipLibCheck": true,
-		"sourceMap": true,
-		"strict": true,
-		"module": "NodeNext",
-		"moduleResolution": "NodeNext"
+		"types": ["svelte"],
+		"moduleResolution": "node",
+		"target": "esnext"
 	}
 }
