--- a/svelte/tsconfig.json
+++ b/svelte/tsconfig.json
@@ -1,7 +1,21 @@
 {
 	"compilerOptions": {
-		"types": ["svelte"],
-		"moduleResolution": "node",
-		"target": "esnext"
-	}
+		"allowJs": true,
+		"checkJs": true,
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"resolveJsonModule": true,
+		"skipLibCheck": true,
+		"sourceMap": true,
+		"strict": true,
+		"module": "NodeNext",
+		"moduleResolution": "NodeNext",
+		"baseUrl": ".",
+		"paths": {
+			"$lib/*": ["src/lib/*"],
+			"$routes/*": ["src/routes/*"]
+		}
+	},
+	"include": ["src"],
+	"exclude": ["node_modules", ".svelte-kit"]
 }
