--- a/svelte/package.json
+++ b/svelte/package.json
@@ -4,10 +4,10 @@
 	"private": true,
 	"type": "module",
 	"scripts": {
-		"start": "node build",
 		"dev": "vite dev",
 		"build": "vite build",
-		"preview": "vite preview",
+        "start": "node build",
+		"preview": "vite preview --host",
 		"prepare": "svelte-kit sync || echo ''",
 		"prepack": "svelte-kit sync && svelte-package && publint",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
