--- a/svelte/package.json
+++ b/svelte/package.json
@@ -34,14 +34,15 @@
 		"svelte": "^5.45.6",
 		"svelte-check": "^4.3.4",
 		"tailwindcss": "^4.1.17",
-        "@tailwindcss/forms": "^0.5.10",
-        "@tailwindcss/typography": "^0.5.19",
+		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/typography": "^0.5.19",
 		"typescript": "^5.9.3",
 		"vite": "^7.2.6"
 	},
 	"dependencies": {
 		"@iconify/svelte": "^5.1.0",
 		"daisyui": "^5.5.14",
-		"postgres": "^3.4.7"
+		"postgres": "^3.4.7",
+		"three": "^0.182.0"
 	}
 }
