--- a/svelte/package.json
+++ b/svelte/package.json
@@ -37,8 +37,9 @@
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.19",
 		"typescript": "^5.9.3",
-		"vite": "^7.2.6"
-	},
+		"vite": "^7.2.6",
+        "gltfloader": "github:codeurdenuit/GLTFLoader"
+    },
 	"dependencies": {
 		"@iconify/svelte": "^5.1.0",
 		"daisyui": "^5.5.14",
