--- a/svelte/package.json
+++ b/svelte/package.json
@@ -24,26 +24,27 @@
 		"@sveltejs/adapter-node": "^5.4.0",
 		"@sveltejs/kit": "^2.49.1",
 		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.17",
 		"@types/node": "^24",
 		"drizzle-kit": "^0.31.8",
 		"drizzle-orm": "^0.45.0",
+		"gltfloader": "github:codeurdenuit/GLTFLoader",
 		"prettier": "^3.7.4",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.7.2",
 		"svelte": "^5.45.6",
 		"svelte-check": "^4.3.4",
 		"tailwindcss": "^4.1.17",
-		"@tailwindcss/forms": "^0.5.10",
-		"@tailwindcss/typography": "^0.5.19",
 		"typescript": "^5.9.3",
-		"vite": "^7.2.6",
-        "gltfloader": "github:codeurdenuit/GLTFLoader"
-    },
+		"vite": "^7.2.6"
+	},
 	"dependencies": {
 		"@iconify/svelte": "^5.1.0",
 		"daisyui": "^5.5.14",
 		"postgres": "^3.4.7",
+		"svelte-highlight": "^7.9.0",
 		"three": "^0.182.0"
 	}
 }
