--- a/svelte/package.json
+++ b/svelte/package.json
@@ -45,6 +45,7 @@
 		"daisyui": "^5.5.14",
 		"postgres": "^3.4.7",
 		"svelte-highlight": "^7.9.0",
+		"svelte-vertical-timeline": "^2.0.0",
 		"three": "^0.182.0"
 	}
 }
